--- a/src/styles/components/_quote.scss
+++ b/src/styles/components/_quote.scss
@@ -1,8 +1,22 @@
 .quote {
   margin-top: 4rem;
   padding-top: 2rem;
-  font-size: 1.5rem;
-  font-weight: 700;
-  font-style: italic;
+  font-size: 1.4rem;
+  color: rgba($color: #000000, $alpha: 0.5);
+  font-weight: 400;
+  text-transform: uppercase;
+  // font-style: italic;
   text-align: center;
+  margin-bottom: 1rem;
+  & > span {
+    text-decoration: underline;
+    color: $primary;
+    text-decoration-color: black;
+  }
+  &__lq,
+  &__rq {
+    width: 3rem;
+    height: 3rem;
+    margin: 0 1rem;
+  }
 }
