--- a/src/styles/components/_carousel.scss
+++ b/src/styles/components/_carousel.scss
@@ -15,17 +15,18 @@
     width: 100%;
     height: 75vh;
     transition: all 0.4s;
-    padding: 0rem 4rem;
+    // padding: 0rem 4rem;
     object-fit: cover;
     margin-bottom: 3rem;
+    @media (max-width: 37.5em) {
+      height: 75vh;
+    }
     &__image {
       width: 100%;
       height: 100%;
       object-fit: cover;
     }
-    @media (max-width: 600px) {
-      height: 18rem;
-    }
+
     & > div {
       flex-shrink: 0;
       background-size: contain;
