--- a/src/styles/components/_memoriesCard.scss
+++ b/src/styles/components/_memoriesCard.scss
@@ -13,13 +13,17 @@
   @media (min-width: 90rem) {
     width: 25%;
   }
-  @media (min-width: 90rem) {
-    width: 25%;
+  @media (min-width: 150em) {
+    width: 20%;
   }
   &__fig {
     position: relative;
     border-radius: 10px;
     overflow: hidden;
+
+    @media (min-width: 106em) {
+      width: 100%;
+    }
     & img {
       object-fit: cover;
       width: 100%;
