--- a/src/styles/components/_memoryCard.scss
+++ b/src/styles/components/_memoryCard.scss
@@ -10,16 +10,19 @@
   @media (min-width: 56em) {
     width: 33.3333%;
   }
-  @media (min-width: 90em) {
+  @media (min-width: 90rem) {
     width: 25%;
   }
-  @media (min-width: 160em) {
-    width: 55%;
+  @media (min-width: 150em) {
+    width: 20%;
   }
   &__fig {
     position: relative;
     border-radius: 10px;
     overflow: hidden;
+    @media (min-width: 106em) {
+      width: 100%;
+    }
     & img {
       object-fit: cover;
       width: 100%;
