--- a/src/styles/components/_quote.scss
+++ b/src/styles/components/_quote.scss
@@ -8,15 +8,23 @@
   // font-style: italic;
   text-align: center;
   margin-bottom: 1rem;
+  @media (max-width: 37.5em) {
+    font-size: 1rem;
+  }
   & > span {
-    text-decoration: underline;
-    color: $primary;
-    text-decoration-color: black;
+    // text-decoration: underline;
+    color: rgba($primary, 0.9);
+    font-weight: 200;
+    text-decoration-color: rgb(176, 174, 174);
   }
   &__lq,
   &__rq {
     width: 3rem;
     height: 3rem;
     margin: 0 1rem;
+    @media (max-width: 37.5em) {
+      width: 2rem;
+      height: 2rem;
+    }
   }
 }
