--- a/src/styles/layout/_navbar.scss
+++ b/src/styles/layout/_navbar.scss
@@ -1,4 +1,8 @@
 .navbar {
+  $timing-function: cubic-bezier(0.19, 1, 0.22, 1);
+  $nav-width-desktop: 40em;
+  $nav-width-mobile: 25em;
+  $nav-item-nb: 6;
   width: 100%;
   // margin-right: calc(100vw - 100%);
   // margin-right: 0;
@@ -7,22 +11,27 @@
   top: 0;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
   &__icon {
     margin: 1rem;
-    width: 2rem;
+    width: 2.5rem;
     height: 2rem;
     cursor: pointer;
+    position: absolute;
+    top: 0;
+    left: 0;
   }
   &__content {
-    margin-top: 1.8rem;
+    // margin-top: 1.8rem;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
   }
   &__logo {
-    width: 8rem;
-    height: 9rem;
+    margin-top: 2rem;
+    width: 90px;
+    // height: 9rem;
   }
   &__tag {
     font-size: 1rem;
@@ -37,16 +46,22 @@
   }
   &__menu {
     position: absolute;
+    height: 100vh;
     background-color: white;
     box-shadow: 0 0.5rem 0.5rem black;
     padding: 0.8rem 1.5rem;
     transition: all 0.5s;
-    top: 3rem;
+    top: 0;
+    margin-left: -25rem;
     z-index: 99;
-    right: 1.2rem;
-    box-shadow: 0 0.1rem 0.5rem rgb(70, 69, 69);
+    left: 0;
+    box-shadow: 0 0.1rem 0.1rem rgb(70, 69, 69);
     border-radius: 10px;
-    display: none;
+    display: flex;
+    width: 25%;
+    align-items: center;
+    justify-content: center;
+
     tras & > ul {
       font-size: 0.8rem;
     }
@@ -56,8 +71,9 @@
       align-items: center;
       padding: 10px 0;
       font-size: 1.2rem;
-
+      opacity: 1;
       font-weight: 500;
+      transition: all 0.5s;
 
       &-icon {
         width: 2rem;
@@ -66,259 +82,191 @@
     }
   }
   &__menu.active {
+    margin-left: 0;
+
+    & .navbar__menuoptions {
+      // opacity: 1;
+    }
+  }
+  &__input {
+    position: fixed;
+    opacity: 0;
+
+    &:focus + &__label {
+      .navbar__label:hover {
+        opacity: 0.75;
+      }
+    }
+  }
+  &__links {
+    font-family: "Poppins";
+    color: rgb(4, 0, 0);
+    font-size: 32px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: all 0.5s;
+    &:hover {
+      transform: scale(1.2);
+    }
+  }
+  &__label {
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    border: none;
+    outline: none;
+    background: none;
+    cursor: pointer;
+    &::before {
+      position: fixed;
+      z-index: 1;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      content: "";
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity 0.5s $timing-function;
+    }
+    .burger {
+      position: fixed;
+      top: 1em;
+      left: 1em;
+      z-index: 3;
+      width: 2rem;
+      height: 1.5rem;
+      margin: 0;
+      padding: 0;
+      transition: opacity 0.5s $timing-function;
+      &::before,
+      .bar,
+      &::after {
+        position: absolute;
+        left: 0;
+        display: block;
+        width: 100%;
+        height: 8%;
+        background: rgb(0, 0, 0);
+        content: "";
+        transition: all 0.5s $timing-function;
+      }
+      .bar {
+        top: 44%;
+      }
+      &::before {
+        top: 0;
+        transform-origin: top left;
+      }
+      &::after {
+        bottom: 0;
+        transform-origin: bottom left;
+      }
+    }
+  }
+  &__nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    z-index: 2;
     display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: flex-start;
+    // transform: translate3d(0, 0, 0); /* material acceleration */
+    // transform: translateX(-100%);
+    will-change: transform;
+    transition: transform 0.5s $timing-function;
+    &::before {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      z-index: -1;
+      width: $nav-width-mobile;
+      background: #ffffff;
+      content: "";
+      transform: skewX(0deg) translateX(-100%);
+      box-shadow: 0 1rem 2rem rgb(128, 128, 128);
+      // transform-origin: bottom left;
+      // will-change: transform;
+
+      transition: transform 0.5s $timing-function;
+      @media (min-width: 40em) {
+        width: $nav-width-desktop;
+      }
+    }
+    & .navbar__links {
+      margin: 0.5em 0;
+      padding: 0.2em 2em;
+      font-size: 1.5em;
+      color: rgb(0, 0, 0);
+      text-decoration: none;
+      font-weight: 500;
+      transform: translateX(-100%);
+      transition: color 0.15s, transform 0.5s;
+      transition-timing-function: $timing-function;
+      @for $i from 1 through $nav-item-nb {
+        &:nth-child(#{$i}) {
+          transition-delay: 0s, #{50 + (50 * $i)}ms;
+        }
+      }
+      &:hover,
+      &:focus {
+        color: black;
+      }
+    }
+  }
+  &__links {
+    opacity: 0;
+  }
+  [id="navcheck"]:checked {
+    & + .navbar__label {
+      &::before {
+        opacity: 1;
+        pointer-events: auto;
+      }
+      .burger {
+        &::before,
+        &::after {
+          width: 141.42%; // Pythagore!
+        }
+        &::before {
+          transform: rotate(45deg) translateY(0%);
+        }
+        &::after {
+          transform: rotate(-45deg) translateY(0%);
+        }
+        .bar {
+          transform: scale(0.1);
+        }
+      }
+    }
+    & ~ .navbar__nav {
+      transform: translateX(0);
+      &::before {
+        transform: skewX(0deg) translateX(0);
+      }
+      .navbar__links {
+        opacity: 1;
+        transform: translateX(0);
+      }
+    }
+    & ~ main .content {
+      transform: translateX(3em);
+      transform-origin: left center;
+      filter: blur(2px);
+    }
+  }
+  .visuallyhidden {
+    border: 0;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
   }
 }
-// @import url(https://fonts.googleapis.com/css?family=Arimo:400,400italic,700,700italic);
-// body,
-// html {
-//   height: 100%;
-//   padding: 0;
-//   margin: 0;
-//   font-family: "Arimo", sans-serif;
-// }
-
-// main {
-//   z-index: 2;
-//   position: relative;
-//   height: 100%;
-//   // background-color: #2d3142;
-//   -webkit-transition: transform 0.7s ease-in-out;
-//   -moz-transition: transform 0.7s ease-in-out;
-//   -ms-transition: transform 0.7s ease-in-out;
-//   -o-transition: transform 0.7s ease-in-out;
-//   transition: transform 0.7s ease-in-out;
-// }
-
-// .sidebar {
-//   height: 100%;
-//   width: 400px;
-//   position: fixed;
-//   top: 0;
-//   z-index: 1;
-//   right: 0;
-//   // background-color: #ef8354;
-// }
-
-// .bar {
-//   display: block;
-//   height: 5px;
-//   width: 50px;
-//   background-color: #ef8354;
-//   margin: 10px auto;
-// }
-
-// .button {
-//   cursor: pointer;
-//   display: inline-block;
-//   width: auto;
-//   margin: 0 auto;
-//   -webkit-transition: all 0.7s ease;
-//   -moz-transition: all 0.7s ease;
-//   -ms-transition: all 0.7s ease;
-//   -o-transition: all 0.7s ease;
-//   transition: all 0.7s ease;
-// }
-
-// .nav-right {
-//   position: fixed;
-//   right: 40px;
-//   top: 20px;
-// }
-
-// .nav-right.visible-xs {
-//   z-index: 3;
-// }
-
-// .hidden-xs {
-//   display: none;
-// }
-
-// .middle {
-//   margin: 0 auto;
-// }
-
-// .bar {
-//   -webkit-transition: all 0.7s ease;
-//   -moz-transition: all 0.7s ease;
-//   -ms-transition: all 0.7s ease;
-//   -o-transition: all 0.7s ease;
-//   transition: all 0.7s ease;
-// }
-
-// .nav-right.visible-xs .active .bar {
-//   background-color: #fff;
-//   -webkit-transition: all 0.7s ease;
-//   -moz-transition: all 0.7s ease;
-//   -ms-transition: all 0.7s ease;
-//   -o-transition: all 0.7s ease;
-//   transition: all 0.7s ease;
-// }
-
-// .button.active .top {
-//   -webkit-transform: translateY(15px) rotateZ(45deg);
-//   -moz-transform: translateY(15px) rotateZ(45deg);
-//   -ms-transform: translateY(15px) rotateZ(45deg);
-//   -o-transform: translateY(15px) rotateZ(45deg);
-//   transform: translateY(15px) rotateZ(45deg);
-// }
-
-// .button.active .bottom {
-//   -webkit-transform: translateY(-15px) rotateZ(-45deg);
-//   -moz-transform: translateY(-15px) rotateZ(-45deg);
-//   -ms-transform: translateY(-15px) rotateZ(-45deg);
-//   -o-transform: translateY(-15px) rotateZ(-45deg);
-//   transform: translateY(-15px) rotateZ(-45deg);
-// }
-
-// .button.active .middle {
-//   width: 0;
-// }
-
-// .move-to-left {
-//   -webkit-transform: translateX(-400px);
-//   -moz-transform: translateX(-400px);
-//   -ms-transform: translateX(-400px);
-//   -o-transform: translateX(-400px);
-//   transform: translateX(-400px);
-// }
-
-// nav {
-//   padding-top: 30px;
-// }
-
-// .sidebar-list {
-//   padding: 0;
-//   margin: 0;
-//   list-style: none;
-//   position: relative;
-//   margin-top: 150px;
-//   text-align: center;
-// }
-
-// .sidebar-item {
-//   margin: 30px 0;
-//   opacity: 0;
-//   -webkit-transform: translateY(-20px);
-//   -moz-transform: translateY(-20px);
-//   -ms-transform: translateY(-20px);
-//   -o-transform: translateY(-20px);
-//   transform: translateY(-20px);
-// }
-
-// .sidebar-item:first-child {
-//   -webkit-transition: all 0.7s 0.2s ease-in-out;
-//   -moz-transition: all 0.7s 0.2s ease-in-out;
-//   -ms-transition: all 0.7s 0.2s ease-in-out;
-//   -o-transition: all 0.7s 0.2s ease-in-out;
-//   transition: all 0.7s 0.2s ease-in-out;
-// }
-
-// .sidebar-item:nth-child(2) {
-//   -webkit-transition: all 0.7s 0.4s ease-in-out;
-//   -moz-transition: all 0.7s 0.4s ease-in-out;
-//   -ms-transition: all 0.7s 0.4s ease-in-out;
-//   -o-transition: all 0.7s 0.4s ease-in-out;
-//   transition: all 0.7s 0.4s ease-in-out;
-// }
-
-// .sidebar-item:nth-child(3) {
-//   -webkit-transition: all 0.7s 0.6s ease-in-out;
-//   -moz-transition: all 0.7s 0.6s ease-in-out;
-//   -ms-transition: all 0.7s 0.6s ease-in-out;
-//   -o-transition: all 0.7s 0.6s ease-in-out;
-//   transition: all 0.7s 0.6s ease-in-out;
-// }
-
-// .sidebar-item:last-child {
-//   -webkit-transition: all 0.7s 0.8s ease-in-out;
-//   -moz-transition: all 0.7s 0.8s ease-in-out;
-//   -ms-transition: all 0.7s 0.8s ease-in-out;
-//   -o-transition: all 0.7s 0.8s ease-in-out;
-//   transition: all 0.7s 0.6s ease-in-out;
-// }
-
-// .sidebar-item.active {
-//   opacity: 1;
-//   -webkit-transform: translateY(0px);
-//   -moz-transform: translateY(0px);
-//   -ms-transform: translateY(0px);
-//   -o-transform: translateY(0px);
-//   transform: translateY(0px);
-// }
-
-// .sidebar-anchor {
-//   color: #fff;
-//   text-decoration: none;
-//   font-size: 1.8em;
-//   text-transform: uppercase;
-//   position: relative;
-//   padding-bottom: 7px;
-// }
-
-// .sidebar-anchor:before {
-//   content: "";
-//   width: 0;
-//   height: 2px;
-//   position: absolute;
-//   bottom: 0;
-//   left: 0;
-//   background-color: #fff;
-//   -webkit-transition: all 0.7s ease-in-out;
-//   -moz-transition: all 0.7s ease-in-out;
-//   -ms-transition: all 0.7s ease-in-out;
-//   -o-transition: all 0.7s ease-in-out;
-//   transition: all 0.7s ease-in-out;
-// }
-
-// .sidebar-anchor:hover:before {
-//   width: 100%;
-// }
-
-// .ua {
-//   position: absolute;
-//   bottom: 20px;
-//   left: 30px;
-// }
-
-// .fa {
-//   font-size: 1.4em;
-//   color: #ef8354;
-//   -webkit-transition: all 1s ease;
-//   -moz-transition: all 1s ease;
-//   -ms-transition: all 1s ease;
-//   -o-transition: all 1s ease;
-//   transition: all 1s ease;
-// }
-
-// .ua:hover .fa {
-//   color: #fff;
-//   -webkit-transform: scale(1.3);
-//   -moz-transform: scale(1.3);
-//   -ms-transform: scale(1.3);
-//   -o-transform: scale(1.3);
-//   transform: scale(1.3);
-//   -webkit-transition: all 1s ease;
-//   -moz-transition: all 1s ease;
-//   -ms-transition: all 1s ease;
-//   -o-transition: all 1s ease;
-//   transition: all 1s ease;
-// }
-
-// @media (min-width: 480px) {
-//   .nav-list {
-//     display: block;
-//   }
-// }
-
-// @media (min-width: 768px) {
-//   .nav-right {
-//     position: absolute;
-//   }
-//   .hidden-xs {
-//     display: block;
-//   }
-//   .visible-xs {
-//     display: none;
-//   }
-// }
