added contact form

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -23,6 +23,7 @@
 @import "./pages/memory";
 @import "./pages/about";
 @import "./pages/contact";
+@import "./pages/cinematography";
 
 // ##################################################
 // ## COMPONENTS #########################################
