--- a/src/styles/layout/_navbar.scss
+++ b/src/styles/layout/_navbar.scss
@@ -133,7 +133,7 @@
       position: fixed;
       top: 1em;
       left: 1em;
-      z-index: 3;
+      z-index: 53;
       width: 2rem;
       height: 1.5rem;
       margin: 0;
@@ -169,7 +169,7 @@
     top: 0;
     left: 0;
     bottom: 0;
-    z-index: 2;
+    z-index: 51;
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
@@ -203,7 +203,7 @@
       font-size: 1.5em;
       color: rgb(0, 0, 0);
       text-decoration: none;
-      font-weight: 500;
+      font-weight: 200;
       transform: translateX(-100%);
       transition: color 0.15s, transform 0.5s;
       transition-timing-function: $timing-function;
@@ -220,6 +220,9 @@
   }
   &__links {
     opacity: 0;
+    &:hover {
+      font-weight: 600;
+    }
   }
   [id="navcheck"]:checked {
     & + .navbar__label {
