--- a/src/styles/pages/_about.scss
+++ b/src/styles/pages/_about.scss
@@ -1,23 +1,24 @@
 .about {
   display: flex;
-
   gap: 6rem;
   align-items: center;
   // flex-wrap: wrap;
   @media (min-width: 20em) {
     flex-wrap: wrap;
     gap: 4rem;
+
     margin: 8rem 1rem 4rem 1rem;
     justify-content: center;
+    align-items: center;
   }
   @media (min-width: 56em) {
     flex-wrap: nowrap;
     gap: 4rem;
-    margin: 8rem 1rem 4rem 1rem;
+    margin: 12rem 1rem 4rem 1rem;
     justify-content: center;
   }
   @media (min-width: 77em) {
-    margin: 8rem 10rem 4rem 10rem;
+    margin: 12rem 10rem 4rem 10rem;
   }
   &_details {
     &__sec1 {
@@ -40,17 +41,42 @@
     }
   }
   &__picture {
-    height: 25rem;
+    width: 45%;
+    height: 20rem;
+    display: flex;
+    justify-content: center;
+    @media (min-width: 20em) {
+      width: 100%;
+    }
+    @media (min-width: 37.5em) {
+      height: 20rem;
+    }
     @media (min-width: 56em) {
-      height: 25rem;
+      height: 20rem;
+      // width: auto;
     }
     &__cont {
+      width: 20rem;
+      height: 100%;
+      border-radius: 50%;
+      // overflow: hidden;
+      // @media (min-width: 56em) {
+      //   height: auto;
+      //   width: auto;
+      // }
+      @media (min-width: 20em) {
+      }
+      @media (min-width: 37.5em) {
+        height: 20rem;
+      }
+      @media (min-width: 56em) {
+        height: 20rem;
+        // width: auto;
+      }
       & > img {
-        border-radius: 100%;
-        object-fit: cover;
-        @media (min-width: 56em) {
-          height: 50%;
-        }
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
       }
     }
   }
