--- a/src/styles/pages/_contact.scss
+++ b/src/styles/pages/_contact.scss
@@ -1,223 +1,539 @@
-// body {
-//   background: linear-gradient(to right, #ea1d6f 0%, #eb466b 100%);
-//   font-size: 12px;
+// // body {
+// //   background: linear-gradient(to right, #ea1d6f 0%, #eb466b 100%);
+// //   font-size: 12px;
+// // }
+
+// .background {
+//   display: flex;
+//   min-height: 100vh;
 // }
 
-.background {
-  display: flex;
-  min-height: 100vh;
-}
+// .container {
+//   flex: 0 1 700px;
+//   margin: auto;
+//   padding: 10px;
+// }
+
+// .screen {
+//   position: relative;
+//   background: #000000;
+//   border-radius: 15px;
+// }
+
+// .screen:after {
+//   content: "";
+//   display: block;
+//   position: absolute;
+//   top: 0;
+//   left: 20px;
+//   right: 20px;
+//   bottom: 0;
+//   border-radius: 15px;
+//   box-shadow: 0 20px 40px rgba(0, 0, 0, 0.4);
+//   z-index: -1;
+// }
+
+// .screen-header {
+//   display: flex;
+//   align-items: center;
+//   padding: 10px 20px;
+//   background: #4d4d4f;
+//   border-top-left-radius: 15px;
+//   border-top-right-radius: 15px;
+// }
+
+// .screen-header-left {
+//   margin-right: auto;
+// }
+
+// .screen-header-button {
+//   display: inline-block;
+//   width: 8px;
+//   height: 8px;
+//   margin-right: 3px;
+//   border-radius: 8px;
+//   background: white;
+// }
+
+// .screen-header-button.close {
+//   background: #ed1c6f;
+// }
+
+// .screen-header-button.maximize {
+//   background: #e8e925;
+// }
+
+// .screen-header-button.minimize {
+//   background: #74c54f;
+// }
+
+// .screen-header-right {
+//   display: flex;
+// }
+
+// .screen-header-ellipsis {
+//   width: 3px;
+//   height: 3px;
+//   margin-left: 2px;
+//   border-radius: 8px;
+//   background: #999;
+// }
+
+// .screen-body {
+//   display: flex;
+// }
+
+// .screen-body-item {
+//   flex: 1;
+//   padding: 50px;
+// }
+
+// .screen-body-item.left {
+//   display: flex;
+//   flex-direction: column;
+// }
+
+// .app-title {
+//   display: flex;
+//   flex-direction: column;
+//   position: relative;
+//   color: $primary;
+//   font-size: 26px;
+// }
+
+// .app-title:after {
+//   content: "";
+//   display: block;
+//   position: absolute;
+//   left: 0;
+//   bottom: -10px;
+//   width: 25px;
+//   height: 4px;
+//   background: $primary;
+// }
+
+// .app-contact {
+//   margin-top: auto;
+//   font-size: 8px;
+//   color: #888;
+// }
+
+// .app-form-group {
+//   margin-bottom: 15px;
+// }
+
+// .app-form-group.message {
+//   margin-top: 40px;
+// }
+
+// .app-form-group.buttons {
+//   margin-bottom: 0;
+//   text-align: right;
+// }
+
+// .app-form-control {
+//   width: 100%;
+//   padding: 10px 0;
+//   background: none;
+//   border: none;
+//   border-bottom: 1px solid #666;
+//   color: #ddd;
+//   font-size: 14px;
+//   text-transform: uppercase;
+//   outline: none;
+//   transition: border-color 0.2s;
+// }
+
+// .app-form-control::placeholder {
+//   color: #666;
+// }
+
+// .app-form-control:focus {
+//   border-bottom-color: #ddd;
+// }
+
+// .app-form-button {
+//   background: none;
+//   border: none;
+//   color: $primary;
+//   font-size: 14px;
+//   cursor: pointer;
+//   outline: none;
+// }
+
+// .app-form-button:hover {
+//   color: $primary;
+// }
+
+// .credits {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   margin-top: 20px;
+//   color: #ffa4bd;
+//   font-family: "Roboto Condensed", sans-serif;
+//   font-size: 16px;
+//   font-weight: normal;
+// }
+
+// .credits-link {
+//   display: flex;
+//   align-items: center;
+//   color: #fff;
+//   font-weight: bold;
+//   text-decoration: none;
+// }
+
+// .dribbble {
+//   width: 20px;
+//   height: 20px;
+//   margin: 0 5px;
+// }
+
+// @media screen and (max-width: 520px) {
+//   .screen-body {
+//     flex-direction: column;
+//   }
+
+//   .screen-body-item.left {
+//     margin-bottom: 30px;
+//   }
+
+//   .app-title {
+//     flex-direction: row;
+//   }
+
+//   .app-title span {
+//     margin-right: 12px;
+//   }
+
+//   .app-title:after {
+//     display: none;
+//   }
+// }
+
+// @media screen and (max-width: 600px) {
+//   .screen-body {
+//     padding: 40px;
+//   }
+
+//   .screen-body-item {
+//     padding: 0;
+//   }
+// }
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap");
 
 .container {
-  flex: 0 1 700px;
-  margin: auto;
-  padding: 10px;
-}
-
-.screen {
+  font-family: "Poppins", sans-serif;
   position: relative;
-  background: #000000;
-  border-radius: 15px;
-}
-
-.screen:after {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 20px;
-  right: 20px;
-  bottom: 0;
-  border-radius: 15px;
-  box-shadow: 0 20px 40px rgba(0, 0, 0, 0.4);
-  z-index: -1;
-}
-
-.screen-header {
+  width: 100%;
+  margin-top: 2rem;
+  min-height: 100vh;
+  padding: 2rem;
+  background-color: transparent;
+  overflow: hidden;
   display: flex;
   align-items: center;
-  padding: 10px 20px;
-  background: #4d4d4f;
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
+  justify-content: center;
 }
 
-.screen-header-left {
-  margin-right: auto;
-}
-
-.screen-header-button {
-  display: inline-block;
-  width: 8px;
-  height: 8px;
-  margin-right: 3px;
-  border-radius: 8px;
-  background: white;
-}
-
-.screen-header-button.close {
-  background: #ed1c6f;
-}
-
-.screen-header-button.maximize {
-  background: #e8e925;
-}
-
-.screen-header-button.minimize {
-  background: #74c54f;
-}
-
-.screen-header-right {
-  display: flex;
-}
-
-.screen-header-ellipsis {
-  width: 3px;
-  height: 3px;
-  margin-left: 2px;
-  border-radius: 8px;
-  background: #999;
-}
-
-.screen-body {
-  display: flex;
-}
-
-.screen-body-item {
-  flex: 1;
-  padding: 50px;
-}
-
-.screen-body-item.left {
-  display: flex;
-  flex-direction: column;
-}
-
-.app-title {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  color: $primary;
-  font-size: 26px;
-}
-
-.app-title:after {
-  content: "";
-  display: block;
-  position: absolute;
-  left: 0;
-  bottom: -10px;
-  width: 25px;
-  height: 4px;
-  background: $primary;
-}
-
-.app-contact {
-  margin-top: auto;
-  font-size: 8px;
-  color: #888;
-}
-
-.app-form-group {
-  margin-bottom: 15px;
-}
-
-.app-form-group.message {
-  margin-top: 40px;
-}
-
-.app-form-group.buttons {
-  margin-bottom: 0;
-  text-align: right;
-}
-
-.app-form-control {
+.form {
   width: 100%;
-  padding: 10px 0;
-  background: none;
-  border: none;
-  border-bottom: 1px solid #666;
-  color: #ddd;
-  font-size: 14px;
-  text-transform: uppercase;
+  max-width: 820px;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.1);
+  z-index: 10;
+  overflow: hidden;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+}
+
+.contact-form {
+  background-color: $primary;
+  position: relative;
+}
+
+.circle {
+  border-radius: 50%;
+  background: linear-gradient(135deg, transparent 20%, $primary);
+  position: absolute;
+}
+
+.circle.one {
+  width: 130px;
+  height: 130px;
+  top: 130px;
+  right: -40px;
+}
+
+.circle.two {
+  width: 80px;
+  height: 80px;
+  top: 10px;
+  right: 30px;
+}
+
+.contact-form:before {
+  content: "";
+  position: absolute;
+  width: 26px;
+  height: 26px;
+  background-color: rgba(#1abc9c, 9.4);
+  transform: rotate(45deg);
+  top: 50px;
+  left: -13px;
+}
+
+form {
+  padding: 2.3rem 2.2rem;
+  z-index: 10;
+  overflow: hidden;
+  position: relative;
+}
+
+.title {
+  color: #fff;
+  font-weight: 500;
+  font-size: 1.5rem;
+  line-height: 1;
+  margin-bottom: 0.7rem;
+}
+
+.input-container {
+  position: relative;
+  margin: 1rem 0;
+}
+
+.input {
+  width: 100%;
   outline: none;
-  transition: border-color 0.2s;
-}
-
-.app-form-control::placeholder {
-  color: #666;
-}
-
-.app-form-control:focus {
-  border-bottom-color: #ddd;
-}
-
-.app-form-button {
+  border: 2px solid #fafafa;
   background: none;
-  border: none;
-  color: $primary;
-  font-size: 14px;
+  padding: 0.6rem 1.2rem;
+  color: #fff;
+  font-weight: 500;
+  font-size: 0.95rem;
+  letter-spacing: 0.5px;
+  border-radius: 5px;
+  transition: 0.3s;
+  &::placeholder {
+    color: white;
+  }
+}
+
+textarea.input {
+  padding: 0.8rem 1.2rem;
+  min-height: 150px;
+  border-radius: 5px;
+  resize: none;
+  overflow-y: auto;
+}
+
+.btn {
+  padding: 0.6rem 1.3rem;
+  background-color: #fff;
+  border: 2px solid #fafafa;
+  font-size: 0.95rem;
+  color: #1abc9c;
+  line-height: 1;
+  border-radius: 25px;
+  outline: none;
   cursor: pointer;
-  outline: none;
+  transition: 0.3s;
+  margin: 0;
 }
 
-.app-form-button:hover {
-  color: $primary;
+.btn:hover {
+  background-color: transparent;
+  color: #fff;
 }
 
-.credits {
+.contact-info {
+  padding: 2.3rem 2.2rem;
+  position: relative;
+}
+
+.contact-info .title {
+  color: #1abc9c;
+}
+
+.text {
+  color: #333;
+  margin: 1.5rem 0 2rem 0;
+}
+
+.information {
+  display: flex;
+  color: #555;
+  margin: 0.7rem 0;
+  align-items: center;
+  font-size: 0.95rem;
+}
+
+.icon {
+  width: 28px;
+  margin-right: 0.7rem;
+}
+
+.social-media {
+  padding: 2rem 0 0 0;
+}
+
+.social-media p {
+  color: #333;
+}
+
+.social-icons {
+  display: flex;
+  margin-top: 0.5rem;
+}
+
+.social-icons a {
+  width: 35px;
+  height: 35px;
+  border-radius: 5px;
+  background: linear-gradient(45deg, #1abc9c, #149279);
+  color: #fff;
+  text-align: center;
+  line-height: 35px;
+  margin-right: 0.5rem;
+  transition: 0.3s;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 20px;
-  color: #ffa4bd;
-  font-family: "Roboto Condensed", sans-serif;
-  font-size: 16px;
-  font-weight: normal;
 }
 
-.credits-link {
-  display: flex;
-  align-items: center;
-  color: #fff;
-  font-weight: bold;
-  text-decoration: none;
+.social-icons a:hover {
+  transform: scale(1.05);
 }
 
-.dribbble {
-  width: 20px;
-  height: 20px;
-  margin: 0 5px;
+.contact-info:before {
+  content: "";
+  position: absolute;
+  width: 110px;
+  height: 100px;
+  border: 22px solid #1abc9c;
+  border-radius: 50%;
+  bottom: -77px;
+  right: 50px;
+  opacity: 0.3;
 }
 
-@media screen and (max-width: 520px) {
-  .screen-body {
-    flex-direction: column;
+.big-circle {
+  position: absolute;
+  width: 500px;
+  height: 500px;
+  border-radius: 50%;
+  background: linear-gradient(to bottom, #1cd4af, #159b80);
+  bottom: 50%;
+  right: 50%;
+  transform: translate(-40%, 38%);
+}
+
+.big-circle:after {
+  content: "";
+  position: absolute;
+  width: 360px;
+  height: 360px;
+  background-color: #fafafa;
+  border-radius: 50%;
+  top: calc(50% - 180px);
+  left: calc(50% - 180px);
+}
+
+.square {
+  position: absolute;
+  height: 400px;
+  top: 50%;
+  left: 50%;
+  transform: translate(181%, 11%);
+  opacity: 0.2;
+}
+
+@media (max-width: 850px) {
+  .form {
+    grid-template-columns: 1fr;
   }
 
-  .screen-body-item.left {
-    margin-bottom: 30px;
+  .contact-info:before {
+    bottom: initial;
+    top: -75px;
+    right: 65px;
+    transform: scale(0.95);
   }
 
-  .app-title {
-    flex-direction: row;
+  .contact-form:before {
+    top: -13px;
+    left: initial;
+    right: 70px;
   }
 
-  .app-title span {
-    margin-right: 12px;
+  .square {
+    transform: translate(140%, 43%);
+    height: 350px;
   }
 
-  .app-title:after {
+  .big-circle {
+    bottom: 75%;
+    transform: scale(0.9) translate(-40%, 30%);
+    right: 50%;
+  }
+
+  .text {
+    margin: 1rem 0 1.5rem 0;
+  }
+
+  .social-media {
+    padding: 1.5rem 0 0 0;
+  }
+}
+
+@media (max-width: 480px) {
+  .container {
+    padding: 1.5rem;
+  }
+
+  .contact-info:before {
     display: none;
   }
-}
 
-@media screen and (max-width: 600px) {
-  .screen-body {
-    padding: 40px;
+  .square,
+  .big-circle {
+    display: none;
   }
 
-  .screen-body-item {
-    padding: 0;
+  form,
+  .contact-info {
+    padding: 1.7rem 1.6rem;
+  }
+
+  .text,
+  .information,
+  .social-media p {
+    font-size: 0.8rem;
+  }
+
+  .title {
+    font-size: 1.15rem;
+  }
+
+  .social-icons a {
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+  }
+
+  .icon {
+    width: 23px;
+  }
+
+  .input {
+    padding: 0.45rem 1.2rem;
+  }
+
+  .btn {
+    padding: 0.45rem 1.2rem;
   }
 }
