--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -32,3 +32,4 @@
 @import "./components/memoriesCard";
 @import "./components/footer";
 @import "./components/spinner";
+@import "./components/memoryCard";
