--- a/src/styles/components/_memoriesCard.scss
+++ b/src/styles/components/_memoriesCard.scss
@@ -17,9 +17,15 @@
     width: 20%;
   }
   &__fig {
+    box-shadow: rgba(99, 99, 99, 0.2) 0px -5px 10px 0px;
     position: relative;
-    border-radius: 10px;
+    border-radius: 5px;
     overflow: hidden;
+    transition: all 0.4s;
+    &:hover {
+      transform: translateY(-13px);
+      box-shadow: rgba(99, 99, 99, 0.2) 0px -5px 20px 0px;
+    }
     @media (min-width: 56em) {
       width: 100%;
     }
@@ -37,7 +43,7 @@
     min-width: 70%;
     text-align: center;
     font-weight: 500;
-    border-radius: 10px;
+    border-radius: 5px;
     background-color: white;
     padding: 10px 5px;
     position: absolute;
