--- a/src/styles/components/_memoryCard.scss
+++ b/src/styles/components/_memoryCard.scss
@@ -1,4 +1,4 @@
-.memcard {
+.memorycard {
   display: flex;
   padding: 1rem;
   // height: 15rem;
@@ -8,19 +8,24 @@
   }
 
   @media (min-width: 56em) {
-    width: 33.3333%;
+    width: 50%;
   }
   @media (min-width: 90rem) {
-    width: 20%;
+    width: 50%;
   }
   @media (min-width: 150em) {
-    width: 20%;
+    width: 25%;
   }
   &__fig {
     position: relative;
     border-radius: 10px;
     overflow: hidden;
-
+    @media (min-width: 56em) {
+      width: 100%;
+    }
+    @media (min-width: 90rem) {
+      width: 100%;
+    }
     @media (min-width: 106em) {
       width: 100%;
     }
