--- a/src/styles/pages/_memories.scss
+++ b/src/styles/pages/_memories.scss
@@ -39,7 +39,8 @@
     display: flex;
     flex-wrap: wrap;
     list-style: none;
-
+    row-gap: 4rem;
+    margin-bottom: 4rem;
     margin: 0;
     padding: 0;
     @media (max-width: 40em) {
