added graphql queries

--- a/src/styles/components/_memoryCard.scss
+++ b/src/styles/components/_memoryCard.scss
@@ -19,6 +19,7 @@
   &__fig {
     position: relative;
     border-radius: 10px;
+    height: 30rem;
     overflow: hidden;
     @media (min-width: 56em) {
       width: 100%;
