--- a/src/styles/components/_spinner.scss
+++ b/src/styles/components/_spinner.scss
@@ -1,3 +1,11 @@
+.spinner {
+  width: 100vw;
+  height: 50vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .lds-roller {
   display: inline-block;
   position: relative;
