--- a/src/styles/layout/_navbar.scss
+++ b/src/styles/layout/_navbar.scss
@@ -31,7 +31,13 @@
   &__logo {
     margin-top: 2rem;
     width: 90px;
-    object-fit: fill;
+    height: 90px;
+    object-fit: contain;
+    & img {
+      width: 100%;
+      height: 100%;
+    }
+
     // height: 9rem;
   }
   &__tag {
