--- a/src/styles/pages/_cinematography.scss
+++ b/src/styles/pages/_cinematography.scss
@@ -25,8 +25,28 @@
   }
   &__vid {
     width: 80%;
+    display: grid;
+    gap: 20px;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: 350px;
     @media (max-width: 61em) {
-      width: 98%;
+      grid-auto-rows: 280px;
+      grid-template-columns: 1fr;
+    }
+
+    &_items {
+      width: 100%;
+      height: 100%;
+      background: red;
+
+      &:nth-child(3n + 1) {
+        grid-row: span 2;
+        grid-column: 1 / span 2;
+        @media (max-width: 61em) {
+          grid-row: 1;
+          grid-column: 1;
+        }
+      }
     }
   }
   &__fw {
