--- a/src/styles/components/_memoriesCard.scss
+++ b/src/styles/components/_memoriesCard.scss
@@ -7,14 +7,14 @@
     width: 50%;
   }
 
-  @media (min-width: 56rem) {
-    width: 33.3333%;
+  @media (min-width: 56em) {
+    width: 50%;
   }
   @media (min-width: 90rem) {
-    width: 25%;
+    width: 50%;
   }
   @media (min-width: 150em) {
-    width: 20%;
+    width: 25%;
   }
   &__fig {
     box-shadow: rgba(99, 99, 99, 0.2) 0px -5px 10px 0px;
@@ -27,6 +27,9 @@
       box-shadow: rgba(99, 99, 99, 0.2) 0px -5px 20px 0px;
     }
     @media (min-width: 56em) {
+      width: 100%;
+    }
+    @media (min-width: 90rem) {
       width: 100%;
     }
     @media (min-width: 106em) {
