--- a/src/styles/layout/_navbar.scss
+++ b/src/styles/layout/_navbar.scss
@@ -32,10 +32,11 @@
     margin-top: 2rem;
     width: 90px;
     height: 90px;
-    object-fit: contain;
+
     & img {
       width: 100%;
       height: 100%;
+      object-fit: contain;
     }
 
     // height: 9rem;
@@ -106,10 +107,10 @@
     }
   }
   &__links {
-    font-family: "Poppins";
+    letter-spacing: 8px;
     color: rgb(4, 0, 0);
     font-size: 32px;
-    font-weight: bold;
+    font-weight: 800;
     cursor: pointer;
     transition: all 0.5s;
     &:hover {
@@ -207,10 +208,10 @@
     & .navbar__links {
       margin: 0.5em 0;
       padding: 0.2em 2em;
-      font-size: 1.5em;
+      font-size: 1.6em;
       color: rgb(0, 0, 0);
       text-decoration: none;
-      font-weight: 200;
+      font-weight: 100;
       transform: translateX(-100%);
       transition: color 0.15s, transform 0.5s;
       transition-timing-function: $timing-function;
