--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -24,6 +24,7 @@
 @import "./pages/about";
 @import "./pages/contact";
 @import "./pages/cinematography";
+@import "./pages/gallery";
 
 // ##################################################
 // ## COMPONENTS #########################################
