--- a/src/styles/components/_carousel.scss
+++ b/src/styles/components/_carousel.scss
@@ -3,7 +3,7 @@
   position: relative;
   display: flex;
   flex-direction: row;
-  padding-top: 1rem;
+
   // min-height: 100vh;
 
   &__spinner {
@@ -13,7 +13,7 @@
   &__item {
     flex-shrink: 0;
     width: 100%;
-    height: 75vh;
+    height: 100vh;
     transition: all 0.4s;
     padding: 0rem 4rem;
     object-fit: cover;
@@ -154,8 +154,6 @@
   & > &-button-prev {
     z-index: 200;
     color: white;
-
-    @m;
   }
   & > &-button-next {
     color: white;
@@ -178,16 +176,14 @@
   -ms-flex-align: center;
   -webkit-align-items: center;
   align-items: center;
-  border-radius: 10px;
 }
 .swiper-wrapper {
 }
 .swiper-slide img {
   display: block;
-  // width: 90vw;
-  height: 80vh;
+  width: 100vw;
+  height: 100vh;
   // object-fit: contain;
-  border-radius: 10px;
 }
 
 .swiper {
