--- a/src/styles/layout/_navbar.scss
+++ b/src/styles/layout/_navbar.scss
@@ -9,94 +9,74 @@
   // margin-right: calc(100vw - 100%);
   // margin-right: 0;
   height: 3rem;
-
+  position: absolute;
+  top: 0;
+  background-color: transparent;
+  z-index: 22;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  &__icon {
-    margin: 1rem;
-    width: 2.5rem;
-    height: 2rem;
-    cursor: pointer;
-    position: absolute;
-    top: 0;
-    left: 0;
-  }
+  // &__icon {
+  //   margin: 1rem;
+  //   width: 2.5rem;
+  //   height: 2rem;
+  //   cursor: pointer;
+  //   position: absolute;
+  //   top: 0;
+  //   left: 0;
+  // }
   &__content {
-    // margin-top: 1.8rem;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  &__logo {
-    margin-top: 2rem;
-    width: 90px;
-    height: 90px;
-
-    & img {
-      width: 100%;
-      height: 100%;
-      object-fit: contain;
-    }
-
-    // height: 9rem;
-  }
-  &__tag {
-    font-size: 1rem;
-    text-transform: uppercase;
-    letter-spacing: 4px;
-    font-weight: 600;
-  }
-  &__section {
-    margin: 1.5rem;
-    font-weight: 600;
-    font-size: 1.5rem;
-  }
-  &__menu {
-    position: absolute;
-    height: 100vh;
-    background-color: white;
-    // box-shadow: 0 0.5rem 0.5rem black;
-    padding: 0.8rem 1.5rem;
-    transition: all 0.5s;
-    top: 0;
-    margin-left: -25rem;
-    z-index: 99;
-    left: 0;
-    // box-shadow: 0 0.1rem 0.1rem rgb(70, 69, 69);
-    border-radius: 10px;
-    display: flex;
-    width: 25%;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
+    margin-top: 4rem;
+    column-gap: 2rem;
+    &-links {
+      color: white;
+      font-weight: 600;
 
-    tras & > ul {
-      font-size: 0.8rem;
-    }
-    & &options {
-      display: flex;
-      gap: 1rem;
-      align-items: center;
-      padding: 10px 0;
-      font-size: 1.2rem;
-      opacity: 1;
-      font-weight: 500;
-      transition: all 0.5s;
-
-      &-icon {
-        width: 2rem;
-        height: 2rem;
+      text-decoration: none;
+      cursor: pointer;
+      text-transform: uppercase;
+      position: relative;
+      @media (max-width: 800px) {
+        display: none;
+      }
+      &::after {
+        position: absolute;
+        left: -2px;
+        bottom: -7px;
+        content: "";
+        width: 0;
+        height: 3px;
+        background-color: white;
+        transition: all 0.5s ease;
+      }
+      &::before {
+        position: absolute;
+        right: -2px;
+        top: -7px;
+        content: "";
+        width: 0;
+        height: 3px;
+        background-color: white;
+        transition: all 0.5s ease;
+      }
+      &:hover::after,
+      &:hover::before {
+        width: calc(100% - 1rem);
       }
     }
   }
-  &__menu.active {
-    margin-left: 0;
 
-    & .navbar__menuoptions {
-      // opacity: 1;
-    }
+  &__logo {
+    width: 300px;
+    height: 300px;
+    margin: 0 3rem;
   }
+
   &__input {
     position: fixed;
     opacity: 0;
@@ -148,6 +128,10 @@
       margin: 0;
       padding: 0;
       transition: opacity 0.5s $timing-function;
+      display: none;
+      @media (max-width: 800px) {
+        display: block;
+      }
       &::before,
       .bar,
       &::after {
