--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -34,3 +34,4 @@
 @import "./components/footer";
 @import "./components/spinner";
 @import "./components/memoryCard";
+@import "./components/button";
