--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -16,7 +16,7 @@
   top: 7px;
   width: 100%;
   height: 100%;
-  background-color: $primary;
+  background-color: rgb(28, 33, 29);
   display: block;
   -webkit-transition: all 0.15s ease-out;
   -moz-transition: all 0.15s ease-out;
