--- a/src/styles/pages/_gallery.scss
+++ b/src/styles/pages/_gallery.scss
@@ -1,10 +1,11 @@
 .container {
+  max-width: 1440px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
-  margin-top: 10rem;
+  margin: 10rem auto 0;
   box-shadow: inset Opx Opx 30px 30px rgba(0, 0, 0, 0.9);
 }
 
