--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -35,3 +35,4 @@
 @import "./components/spinner";
 @import "./components/memoryCard";
 @import "./components/button";
+@import "./components/artwork";
