--- a/src/styles/pages/_memories.scss
+++ b/src/styles/pages/_memories.scss
@@ -8,6 +8,7 @@
     letter-spacing: 30px;
     color: $primary;
     margin-bottom: 2rem;
+    font-family: "Belgiana";
 
     @media (max-width: 37.6em) {
       letter-spacing: 10px;
@@ -26,6 +27,7 @@
     margin: 1.8rem;
     line-height: 1.6rem;
     // text-indent: 50px;
+
     text-align: center;
     text-justify: newspaper;
     margin-bottom: 4rem;
