minor changes made , things need to be fixed yet

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -2,4 +2,9 @@ $color-white: white;
 
 $color-circle-1: #aee1e1;
 
-$primary: #1abc9c;
+$primary: #91633e;
+// $primary: #1abc9c;
+$col1: #804b33;
+$col2: #f0ceb1;
+
+$text-gradient: linear-gradient(90deg, #804b33 0%, #f0ceb1 104.72%);
