--- a/src/styles/components/_quote.scss
+++ b/src/styles/components/_quote.scss
@@ -11,7 +11,8 @@
     z-index: 55;
     color: rgb(4, 0, 0);
     font-size: 32px;
-
+    font-family: "Bad Script", cursive;
+    text-transform: capitalize;
     q {
       color: rgb(255, 255, 255);
       font-size: 32px;
