--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -42,3 +42,10 @@
     0% calc(100% - 10px) // Bottom left point
   );
 }
+@mixin textgradient {
+  background: linear-gradient(90deg, #804b33 0%, #f0ceb1 104.72%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-fill-color: transparent;
+}
