--- a/src/styles/components/_memoriesCard.scss
+++ b/src/styles/components/_memoriesCard.scss
@@ -16,37 +16,14 @@
     width: 25%;
   }
   &__fig {
-    box-shadow: rgba(99, 99, 99, 0.2) 0px -5px 10px 0px;
+    // box-shadow: rgba(99, 99, 99, 0.2) 0px -5px 10px 0px;
     position: relative;
-    border-radius: 5px;
+    // border-radius: 5px;
     overflow: hidden;
     transition: all 0.4s;
     cursor: pointer;
     position: relative;
-    // .go-corner {
-    //   position: absolute;
-    //   top: -30%;
-    //   left: -50%;
-    //   width: 400px;
-    //   border-radius: 50%;
-    //   height: 400px;
-    //   background-color: rgba($primary, 0.337);
-    //   display: flex;
-    //   justify-content: center;
-    //   align-items: center;
-    //   color: white;
-    //   transition: all 0.4s;
-    //   transform: scale(0);
-    //   font-size: 4rem;
-    //   &:hover {
-    //     transform: scale(1);
-    //     left: -20%;
-    //   }
-    // }
-    // &:hover > .go-corner {
-    //   transform: scale(1);
-    //   left: -20%;
-    // }
+
     &:hover > img {
       filter: blur(1px);
     }
@@ -62,34 +39,50 @@
     & img {
       object-fit: cover;
       width: 100%;
-      height: 100%;
+      height: 85%;
     }
     &:hover > .memcard__caption {
       bottom: 0px;
     }
   }
-
   &__caption {
-    width: 100%;
-    // min-width: 70%;
-    text-align: center;
-    font-weight: 500;
-    border-radius: 5px;
-    background: rgba(255, 255, 255, 0.32);
-    backdrop-filter: blur(10px);
-    padding-bottom: 1rem;
-    position: absolute;
-
-    bottom: -115px;
-    left: 50%;
-    transform: translateX(-50%);
-    transition: all 0.4s;
-    & > p {
-      letter-spacing: 2px;
-      padding: 1rem 0;
-      font-size: 1.1rem;
-      font-weight: 900;
-      color: rgb(255, 255, 255);
+    color: black;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    & > .memcard__details {
+      display: flex;
+      margin-top: 10px;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      font-size: 1.3rem;
+    }
+    .memcard__divider {
+      border-bottom: 1px solid black;
     }
   }
+  // &__caption {
+  //   width: 100%;
+  //   // min-width: 70%;
+  //   text-align: center;
+  //   font-weight: 500;
+  //   border-radius: 5px;
+  //   background: rgba(255, 255, 255, 0.32);
+  //   backdrop-filter: blur(10px);
+  //   padding-bottom: 1rem;
+  //   position: absolute;
+
+  //   bottom: -115px;
+  //   left: 50%;
+  //   transform: translateX(-50%);
+  //   transition: all 0.4s;
+  //   & > p {
+  //     letter-spacing: 2px;
+  //     padding: 1rem 0;
+  //     font-size: 1.1rem;
+  //     font-weight: 900;
+  //     color: rgb(255, 255, 255);
+  //   }
+  // }
 }
