--- a/src/styles/layout/_navbar.scss
+++ b/src/styles/layout/_navbar.scss
@@ -20,8 +20,10 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+
     margin-top: 4rem;
     column-gap: 2rem;
+
     &-links {
       color: white;
       font-weight: 100;
@@ -64,6 +66,11 @@
     width: 300px;
     height: 300px;
     margin: 0 3rem;
+    @media (max-width: 800px) {
+      height: 200px;
+      width: 200px;
+      margin: 0;
+    }
   }
 
   &__input {
@@ -129,7 +136,7 @@
         display: block;
         width: 100%;
         height: 8%;
-        background: rgb(0, 0, 0);
+        background: $col2;
         content: "";
         transition: all 0.5s $timing-function;
       }
@@ -212,6 +219,10 @@
   //   }
   // }
   [id="navcheck"]:not(:checked) {
+    & ~ .navbar__nav {
+      // z-index: -100;
+      display: none;
+    }
   }
   [id="navcheck"]:checked {
     & + .navbar__label {
