--- a/src/styles/pages/_cinematography.scss
+++ b/src/styles/pages/_cinematography.scss
@@ -7,11 +7,28 @@
   max-width: 1440px;
   margin: 10rem auto;
   &__heading {
-    font-size: 4rem;
-    font-weight: 600;
+    margin-top: 1rem;
+    font-size: 8rem;
+    text-align: center;
+    // letter-spacing: 30px;
     color: $primary;
-    margin-bottom: 1rem;
-    letter-spacing: 22px;
+    margin-bottom: 2rem;
+    background: linear-gradient(
+      to right,
+      #ac663f 0%,
+      27.470356225967407%,
+      #c07246 54.940712451934814%,
+      77.47035622596741%,
+      #a7623d 100%
+    );
+    letter-spacing: 4px;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-fill-color: transparent;
+    /* Gradient in Hex */
+
+    font-family: "Tangerine", cursive;
   }
   &__desc {
     color: rgb(111, 111, 111);
