--- a/src/styles/components/_memoriesCard.scss
+++ b/src/styles/components/_memoriesCard.scss
@@ -3,9 +3,9 @@
   padding: 1rem;
 
   @media (min-width: 40rem) {
+    // height: 30rem;
     width: 50%;
   }
-
   @media (min-width: 56em) {
     width: 50%;
   }
@@ -27,6 +27,7 @@
     &:hover > img {
       filter: blur(1px);
     }
+
     @media (min-width: 56em) {
       width: 100%;
     }
@@ -40,6 +41,18 @@
       object-fit: cover;
       width: 100%;
       height: 85%;
+      @media (min-width: 18em) {
+        height: 75%;
+      }
+      @media (min-width: 56em) {
+        height: 75%;
+      }
+      @media (min-width: 90rem) {
+        height: 75%;
+      }
+      @media (min-width: 106em) {
+        height: 85%;
+      }
     }
     &:hover > .memcard__caption {
       bottom: 0px;
