--- a/src/styles/pages/_memories.scss
+++ b/src/styles/pages/_memories.scss
@@ -62,6 +62,7 @@
     flex-wrap: wrap;
     list-style: none;
     row-gap: 2rem;
+
     margin-bottom: 4rem;
     margin: 0;
     padding: 0;
@@ -71,10 +72,10 @@
   }
 }
 
-.smemory {
-  margin-top: 10rem;
-  &__large {
-    width: 100vw;
-    height: 20rem;
-  }
-}
+// .smemory {
+//   margin-top: 10rem;
+//   &__large {
+//     width: 100vw;
+//     height: 20rem;
+//   }
+// }
