--- a/src/styles/pages/_contact.scss
+++ b/src/styles/pages/_contact.scss
@@ -3,12 +3,14 @@
   width: 100%;
   margin-top: 2rem;
   min-height: 100vh;
+  z-index: 1000;
   padding: 2rem;
   background-color: transparent;
   overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
+  background: url("../../assets/contact.jpg");
 }
 
 .form {
