--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -29,6 +29,10 @@
     background-color: rgb(121, 120, 120);
   }
   &__copyright {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     padding: 20px 0;
   }
 }
