--- a/src/styles/pages/_about.scss
+++ b/src/styles/pages/_about.scss
@@ -1,29 +1,36 @@
 .about {
-  display: flex;
-  gap: 6rem;
-  align-items: center;
-  // flex-wrap: wrap;
-  @media (min-width: 20em) {
-    flex-wrap: wrap;
-    gap: 4rem;
-
-    margin: 8rem 1rem 4rem 1rem;
-    justify-content: center;
+  width: min(100% - 2rem, 1440px);
+  margin-inline: auto;
+  & > div {
+    display: flex;
+    gap: 6rem;
     align-items: center;
+    // max-width: 1400px;
+    margin-inline: auto;
+    // flex-wrap: wrap;
+    @media (min-width: 20em) {
+      flex-wrap: wrap;
+      gap: 4rem;
+
+      margin: 8rem 1rem 4rem 1rem;
+      justify-content: center;
+      align-items: center;
+    }
+    @media (min-width: 56em) {
+      flex-wrap: nowrap;
+      gap: 4rem;
+      margin: 12rem 1rem 4rem 1rem;
+      justify-content: center;
+    }
+    @media (min-width: 77em) {
+      margin: 12rem 10rem 4rem 10rem;
+    }
   }
-  @media (min-width: 56em) {
-    flex-wrap: nowrap;
-    gap: 4rem;
-    margin: 12rem 1rem 4rem 1rem;
-    justify-content: center;
-  }
-  @media (min-width: 77em) {
-    margin: 12rem 10rem 4rem 10rem;
-  }
+
   &_details {
     &__sec1 {
       font-size: 1rem;
-      margin-bottom: 1rem;
+      // margin-bottom: 1rem;
     }
     &__sec2 {
       font-size: 2rem;
@@ -39,7 +46,8 @@
     &__sec4 {
       display: inline-flex;
       font-size: 1.5rem;
-      margin-bottom: 10px;
+      margin-bottom: 20px;
+
       // border-right: 4px solid black;
       // animation: __blinkcaret 500ms step-end infinite alternate;
       text-align: justify;
@@ -47,6 +55,9 @@
     &__sec5 {
       font-size: 1rem;
       text-align: justify;
+      &::first-letter {
+        text-transform: capitalize;
+      }
     }
   }
   &__picture {
