--- a/src/styles/pages/_gallery.scss
+++ b/src/styles/pages/_gallery.scss
@@ -5,7 +5,8 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  margin: 10rem auto 0;
+  margin: 5em auto 0;
+  padding-inline: 2rem;
   box-shadow: inset Opx Opx 30px 30px rgba(0, 0, 0, 0.9);
 }
 
