--- a/src/styles/pages/_memories.scss
+++ b/src/styles/pages/_memories.scss
@@ -43,11 +43,11 @@
     }
   }
   &__desc {
-    font-size: 1.2rem;
+    font-size: 1rem;
     margin: 1.8rem;
     line-height: 1.6rem;
     // text-indent: 50px;
-
+    color: rgb(46, 46, 46);
     text-align: center;
     text-justify: newspaper;
     margin-bottom: 4rem;
