--- a/src/styles/pages/_memory.scss
+++ b/src/styles/pages/_memory.scss
@@ -1,5 +1,42 @@
 .memory {
-  margin-top: 6rem;
+  margin-top: 10rem;
+  width: min(100% - 2rem, 1400px);
+  margin-inline: auto;
+  &__heading {
+    margin-top: 8rem;
+    font-size: 3rem;
+    text-align: center;
+    // letter-spacing: 30px;
+    color: $primary;
+    margin-bottom: 2rem;
+
+    background: linear-gradient(
+      to right,
+      #ac663f 0%,
+      27.470356225967407%,
+      #c07246 54.940712451934814%,
+      77.47035622596741%,
+      #a7623d 100%
+    );
+    letter-spacing: 4px;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-fill-color: transparent;
+    /* Gradient in Hex */
+
+    font-family: "Tangerine", cursive;
+
+    @media (max-width: 37.6em) {
+      letter-spacing: 10px;
+      font-size: 5rem;
+    }
+  }
+  &__subheading {
+    text-align: center;
+    font-size: 1rem;
+    margin-top: 2rem;
+  }
   &__card {
     justify-self: center;
     margin: 0 auto;
@@ -65,6 +102,38 @@
     margin-bottom: 3rem;
     & > span {
       color: $primary;
+    }
+  }
+  &__gallery-heading {
+    font-size: 6rem;
+    text-align: center;
+    margin-top: 8rem;
+
+    text-align: center;
+    // letter-spacing: 30px;
+    color: $primary;
+    margin-bottom: 2rem;
+
+    background: linear-gradient(
+      to right,
+      #ac663f 0%,
+      27.470356225967407%,
+      #c07246 54.940712451934814%,
+      77.47035622596741%,
+      #a7623d 100%
+    );
+    letter-spacing: 4px;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-fill-color: transparent;
+    /* Gradient in Hex */
+
+    font-family: "Tangerine", cursive;
+
+    @media (max-width: 37.6em) {
+      letter-spacing: 10px;
+      font-size: 5rem;
     }
   }
 }
