--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -34,5 +34,12 @@
     flex-direction: column;
     align-items: center;
     padding: 20px 0;
+    gap: 10px;
+    & div {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
+    }
   }
 }
