--- a/src/styles/components/_artwork.scss
+++ b/src/styles/components/_artwork.scss
@@ -75,6 +75,8 @@
         77.47035622596741%,
         #a7623d 100%
       );
+      padding-top: 2rem;
+      padding-bottom: 1rem;
       letter-spacing: 4px;
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
