fix: added someting

--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -11,6 +11,6 @@ html {
   scroll-behavior: smooth;
 }
 body {
-  // font-family: "Montserrat", sans-serif;
-  font-family: "Playfair Display", serif;
+  font-family: "Montserrat", sans-serif;
+  // font-family: "Playfair Display", serif;
 }
