--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -25,7 +25,7 @@
 @import "./pages/contact";
 @import "./pages/cinematography";
 @import "./pages/gallery";
-
+@import "./pages/memory_gallery";
 // ##################################################
 // ## COMPONENTS #########################################
 @import "./components/carousel";
@@ -36,3 +36,10 @@
 @import "./components/memoryCard";
 @import "./components/button";
 @import "./components/artwork";
+@import "./components/video";
+@import "./components/getInTouch";
+@import "./components/heading";
+@import "./components/findus";
+
+// ##################################################
+// ## VENDOR #########################################
