--- a/src/styles/components/_quote.scss
+++ b/src/styles/components/_quote.scss
@@ -7,6 +7,7 @@
     position: absolute;
     width: 100%;
     bottom: 0rem;
+    margin-top: -400px;
     text-align: center;
     z-index: 55;
     color: rgb(4, 0, 0);
