--- a/src/styles/layout/_navbar.scss
+++ b/src/styles/layout/_navbar.scss
@@ -1,278 +1,365 @@
-.navbar {
-  $timing-function: cubic-bezier(0.19, 1, 0.22, 1);
-  $nav-width-desktop: 40em;
-  $nav-width-mobile: 25em;
-  $nav-item-nb: 6;
+// .navbar {
+//   $timing-function: cubic-bezier(0.19, 1, 0.22, 1);
+//   $nav-width-desktop: 40em;
+//   $nav-width-mobile: 25em;
+//   $nav-item-nb: 6;
 
-  width: 100%;
-  height: 3rem;
-  position: absolute;
-  top: 0;
-  background-color: transparent;
-  z-index: 22;
+//   width: 100%;
+//   height: 3rem;
+//   position: absolute;
+//   top: 0;
+//   background-color: transparent;
+//   z-index: 22;
+//   display: flex;
+//   flex-direction: row;
+//   justify-content: center;
+//   align-items: center;
+
+//   &__content {
+//     display: flex;
+//     flex-direction: row;
+//     align-items: center;
+//     justify-content: center;
+
+//     margin-top: 4rem;
+//     column-gap: 2rem;
+
+//     &-links {
+//       color: white;
+//       font-weight: 100;
+//       font-weight: 1rem;
+//       text-decoration: none;
+//       cursor: pointer;
+//       text-transform: uppercase;
+//       position: relative;
+//       @media (max-width: 800px) {
+//         display: none;
+//       }
+//       &::after {
+//         position: absolute;
+//         left: -2px;
+//         bottom: -7px;
+//         content: "";
+//         width: 0;
+//         height: 3px;
+//         background-color: currentColor;
+//         transition: all 0.5s ease;
+//       }
+//       &::before {
+//         position: absolute;
+//         right: -2px;
+//         top: -7px;
+//         content: "";
+//         width: 0;
+//         height: 3px;
+//         background-color: currentColor;
+//         transition: all 0.5s ease;
+//       }
+//       &:hover::after,
+//       &:hover::before {
+//         width: calc(100% - 1rem);
+//       }
+//     }
+//   }
+
+//   &__logo {
+//     width: 300px;
+//     height: 300px;
+//     margin: 0 3rem;
+//     @media (max-width: 800px) {
+//       height: 200px;
+//       width: 200px;
+//       margin: 0;
+//     }
+//   }
+
+//   &__input {
+//     position: fixed;
+//     opacity: 0;
+
+//     &:focus + &__label {
+//       .navbar__label:hover {
+//         opacity: 0.75;
+//       }
+//     }
+//   }
+//   &__links {
+//     letter-spacing: 8px;
+//     color: rgb(4, 0, 0);
+//     font-size: 32px;
+//     font-weight: 800;
+//     cursor: pointer;
+//     transition: all 0.5s;
+//     &:hover {
+//       transform: scale(1.2);
+//     }
+//   }
+//   &__label {
+//     position: absolute;
+//     margin: 0;
+//     padding: 0;
+//     border: none;
+//     outline: none;
+//     background: none;
+//     cursor: pointer;
+//     &::before {
+//       position: fixed;
+//       z-index: 1;
+//       top: 0;
+//       left: 0;
+//       right: 0;
+//       bottom: 0;
+//       content: "";
+//       opacity: 0;
+//       pointer-events: none;
+//       transition: opacity 0.5s $timing-function;
+//     }
+//     .burger {
+//       position: fixed;
+//       top: 1em;
+//       left: 1em;
+//       z-index: 53;
+//       width: 2rem;
+//       height: 1.5rem;
+//       margin: 0;
+//       padding: 0;
+//       transition: opacity 0.5s $timing-function;
+//       display: none;
+//       @media (max-width: 800px) {
+//         display: block;
+//       }
+//       &::before,
+//       .bar,
+//       &::after {
+//         position: absolute;
+//         left: 0;
+//         display: block;
+//         width: 100%;
+//         height: 8%;
+//         background: $col2;
+//         content: "";
+//         transition: all 0.5s $timing-function;
+//       }
+//       .bar {
+//         top: 44%;
+//       }
+//       &::before {
+//         top: 0;
+//         transform-origin: top left;
+//       }
+//       &::after {
+//         bottom: 0;
+//         transform-origin: bottom left;
+//       }
+//     }
+//   }
+//   &__nav {
+//     position: absolute;
+//     top: 0;
+//     left: 0;
+//     bottom: 0;
+//     z-index: 0;
+//     display: flex;
+//     flex-flow: column nowrap;
+//     justify-content: center;
+//     align-items: flex-start;
+//     // transform: translate3d(0, 0, 0); /* material acceleration */
+//     // transform: translateX(-100%);
+//     will-change: transform;
+//     transition: transform 0.5s $timing-function;
+//     &::before {
+//       position: absolute;
+//       top: 0;
+//       bottom: 0;
+//       left: 0;
+//       z-index: -1;
+//       width: $nav-width-mobile;
+//       background: #ffffff;
+//       content: "";
+//       transform: skewX(0deg) translateX(-100%);
+
+//       // transform-origin: bottom left;
+//       // will-change: transform;
+
+//       transition: transform 0.5s $timing-function;
+//       @media (min-width: 40em) {
+//         width: $nav-width-desktop;
+//       }
+//     }
+//     & .navbar__links {
+//       margin: 0.5em 0;
+//       padding: 0.2em 2em;
+//       font-size: 1.6em;
+//       color: rgb(0, 0, 0);
+//       text-decoration: none;
+//       font-weight: 100;
+//       transform: translateX(-100%);
+//       transition: color 0.15s, transform 0.5s;
+//       transition-timing-function: $timing-function;
+//       @for $i from 1 through $nav-item-nb {
+//         &:nth-child(#{$i}) {
+//           transition-delay: 0s, #{50 + (50 * $i)}ms;
+//         }
+//       }
+//       &:hover,
+//       &:focus {
+//         color: black;
+//       }
+//     }
+//   }
+//   &__links {
+//     opacity: 0;
+//     &:hover {
+//       font-weight: 600;
+//     }
+//   }
+//   // [id="navcheck"]:checked {
+//   //   .navbar__nav {
+//   //     z-index: 0;
+//   //   }
+//   // }
+//   [id="navcheck"]:not(:checked) {
+//     & ~ .navbar__nav {
+//       // z-index: -100;
+//       display: none;
+//     }
+//   }
+//   [id="navcheck"]:checked {
+//     & + .navbar__label {
+//       &::before {
+//         opacity: 1;
+//         pointer-events: auto;
+//       }
+//       .burger {
+//         &::before,
+//         &::after {
+//           width: 141.42%; // Pythagore!
+//         }
+//         &::before {
+//           transform: rotate(45deg) translateY(0%);
+//         }
+//         &::after {
+//           transform: rotate(-45deg) translateY(0%);
+//         }
+//         .bar {
+//           transform: scale(0.1);
+//         }
+//       }
+//     }
+//     & ~ .navbar__nav {
+//       transform: translateX(0);
+//       z-index: 51;
+//       position: fixed;
+//       &::before {
+//         transform: skewX(0deg) translateX(0);
+//         box-shadow: 0 0.1rem 1rem rgb(128, 128, 128);
+//       }
+//       .navbar__links {
+//         opacity: 1;
+//         transform: translateX(0);
+//       }
+//     }
+//     & ~ main .content {
+//       transform: translateX(3em);
+//       transform-origin: left center;
+//       filter: blur(2px);
+//     }
+//   }
+//   .visuallyhidden {
+//     border: 0;
+//     clip: rect(0 0 0 0);
+//     height: 1px;
+//     margin: -1px;
+//     overflow: hidden;
+//     padding: 0;
+//     position: absolute;
+//     width: 1px;
+//   }
+// }
+
+.nav {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  width: 100%;
   align-items: center;
-
-  &__content {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-
-    margin-top: 4rem;
-    column-gap: 2rem;
-
-    &-links {
-      color: white;
-      font-weight: 100;
-      font-weight: 1rem;
-      text-decoration: none;
-      cursor: pointer;
-      text-transform: uppercase;
-      position: relative;
-      @media (max-width: 800px) {
-        display: none;
-      }
-      &::after {
-        position: absolute;
-        left: -2px;
-        bottom: -7px;
-        content: "";
-        width: 0;
-        height: 3px;
-        background-color: currentColor;
-        transition: all 0.5s ease;
-      }
-      &::before {
-        position: absolute;
-        right: -2px;
-        top: -7px;
-        content: "";
-        width: 0;
-        height: 3px;
-        background-color: currentColor;
-        transition: all 0.5s ease;
-      }
-      &:hover::after,
-      &:hover::before {
-        width: calc(100% - 1rem);
-      }
-    }
+  height: 200x;
+  padding: 0 60px;
+  padding-top: 20px;
+  gap: 40px;
+  background-color: white;
+  @media (max-width: 750px) {
+    padding: 20px 20px;
   }
 
   &__logo {
-    width: 300px;
-    height: 300px;
-    margin: 0 3rem;
-    @media (max-width: 800px) {
-      height: 200px;
-      width: 200px;
-      margin: 0;
-    }
-  }
-
-  &__input {
-    position: fixed;
-    opacity: 0;
-
-    &:focus + &__label {
-      .navbar__label:hover {
-        opacity: 0.75;
-      }
-    }
+    margin-right: auto;
+    width: 200px;
   }
   &__links {
-    letter-spacing: 8px;
-    color: rgb(4, 0, 0);
-    font-size: 32px;
-    font-weight: 800;
-    cursor: pointer;
-    transition: all 0.5s;
-    &:hover {
-      transform: scale(1.2);
-    }
-  }
-  &__label {
-    position: absolute;
-    margin: 0;
-    padding: 0;
-    border: none;
-    outline: none;
-    background: none;
-    cursor: pointer;
-    &::before {
-      position: fixed;
-      z-index: 1;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      content: "";
-      opacity: 0;
-      pointer-events: none;
-      transition: opacity 0.5s $timing-function;
-    }
-    .burger {
-      position: fixed;
-      top: 1em;
-      left: 1em;
-      z-index: 53;
-      width: 2rem;
-      height: 1.5rem;
-      margin: 0;
-      padding: 0;
-      transition: opacity 0.5s $timing-function;
+    text-decoration: none;
+    color: black;
+    font-size: medium;
+    display: inline;
+
+    @media (max-width: 700px) {
       display: none;
-      @media (max-width: 800px) {
-        display: block;
-      }
-      &::before,
-      .bar,
-      &::after {
-        position: absolute;
-        left: 0;
-        display: block;
-        width: 100%;
-        height: 8%;
-        background: $col2;
-        content: "";
-        transition: all 0.5s $timing-function;
-      }
-      .bar {
-        top: 44%;
-      }
-      &::before {
-        top: 0;
-        transform-origin: top left;
-      }
-      &::after {
-        bottom: 0;
-        transform-origin: bottom left;
-      }
     }
   }
-  &__nav {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    z-index: 0;
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: center;
-    align-items: flex-start;
-    // transform: translate3d(0, 0, 0); /* material acceleration */
-    // transform: translateX(-100%);
-    will-change: transform;
-    transition: transform 0.5s $timing-function;
-    &::before {
+
+  .mobile__nav {
+    display: none;
+
+    &--close {
+      color: white;
       position: absolute;
+      right: 0;
       top: 0;
-      bottom: 0;
-      left: 0;
-      z-index: -1;
-      width: $nav-width-mobile;
-      background: #ffffff;
-      content: "";
-      transform: skewX(0deg) translateX(-100%);
-
-      // transform-origin: bottom left;
-      // will-change: transform;
-
-      transition: transform 0.5s $timing-function;
-      @media (min-width: 40em) {
-        width: $nav-width-desktop;
-      }
+      padding: 20px;
     }
-    & .navbar__links {
-      margin: 0.5em 0;
-      padding: 0.2em 2em;
-      font-size: 1.6em;
-      color: rgb(0, 0, 0);
+
+    button {
+      border: none;
+      outline: none;
+      background-color: transparent;
+      font-size: 2rem;
+    }
+    @media (max-width: 700px) {
+      display: block;
+    }
+
+    &--main {
+      width: 100vw;
+      height: 100vh;
+      z-index: 1000;
+
+      background: linear-gradient(
+        to right,
+        #ac663f 0%,
+        27.470356225967407%,
+        #c07246 54.940712451934814%,
+        77.47035622596741%,
+        #a7623d 100%
+      );
+      position: absolute;
+      left: -100vw;
+      top: 0;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      gap: 20px;
+      align-items: center;
+    }
+    .nav__links--mobile {
+      font-size: 2rem;
       text-decoration: none;
-      font-weight: 100;
-      transform: translateX(-100%);
-      transition: color 0.15s, transform 0.5s;
-      transition-timing-function: $timing-function;
-      @for $i from 1 through $nav-item-nb {
-        &:nth-child(#{$i}) {
-          transition-delay: 0s, #{50 + (50 * $i)}ms;
-        }
-      }
-      &:hover,
-      &:focus {
-        color: black;
+      font-weight: 200;
+      color: white;
+      letter-spacing: 10px;
+      opacity: 0;
+      transition: all 0.1s ease;
+
+      &:hover {
+        text-decoration: line-through;
       }
     }
-  }
-  &__links {
-    opacity: 0;
-    &:hover {
-      font-weight: 600;
-    }
-  }
-  // [id="navcheck"]:checked {
-  //   .navbar__nav {
-  //     z-index: 0;
-  //   }
-  // }
-  [id="navcheck"]:not(:checked) {
-    & ~ .navbar__nav {
-      // z-index: -100;
-      display: none;
-    }
-  }
-  [id="navcheck"]:checked {
-    & + .navbar__label {
-      &::before {
-        opacity: 1;
-        pointer-events: auto;
-      }
-      .burger {
-        &::before,
-        &::after {
-          width: 141.42%; // Pythagore!
-        }
-        &::before {
-          transform: rotate(45deg) translateY(0%);
-        }
-        &::after {
-          transform: rotate(-45deg) translateY(0%);
-        }
-        .bar {
-          transform: scale(0.1);
-        }
-      }
-    }
-    & ~ .navbar__nav {
-      transform: translateX(0);
-      z-index: 51;
-      position: fixed;
-      &::before {
-        transform: skewX(0deg) translateX(0);
-        box-shadow: 0 0.1rem 1rem rgb(128, 128, 128);
-      }
-      .navbar__links {
-        opacity: 1;
-        transform: translateX(0);
-      }
-    }
-    & ~ main .content {
-      transform: translateX(3em);
-      transform-origin: left center;
-      filter: blur(2px);
-    }
-  }
-  .visuallyhidden {
-    border: 0;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
   }
 }
