--- a/src/styles/pages/_about.scss
+++ b/src/styles/pages/_about.scss
@@ -1,121 +1,63 @@
 .about {
-  width: min(100% - 2rem, 1440px);
-  margin-inline: auto;
-  & > div {
-    display: flex;
-    gap: 6rem;
-    align-items: center;
-    // max-width: 1400px;
-    margin-inline: auto;
-    // flex-wrap: wrap;
-    @media (min-width: 20em) {
-      flex-wrap: wrap;
-      gap: 4rem;
+  &__us {
+    position: relative;
+    width: 100%;
+    height: 800px;
 
-      margin: 8rem 1rem 4rem 1rem;
-      justify-content: center;
-      align-items: center;
-    }
-    @media (min-width: 56em) {
-      flex-wrap: nowrap;
-      gap: 4rem;
-      margin: 12rem 1rem 4rem 1rem;
-      justify-content: center;
-    }
-    @media (min-width: 77em) {
-      margin: 12rem 10rem 4rem 10rem;
-    }
-  }
-
-  &_details {
-    &__sec1 {
-      font-size: 1rem;
-      // margin-bottom: 1rem;
-    }
-    &__sec2 {
-      font-size: 2rem;
-    }
-    &__sec3 {
-      font-size: 1.5rem;
-      margin-bottom: 1rem;
-      & > span {
-        animation: loop-color 3s infinite;
-        color: $primary;
-      }
-    }
-    &__sec4 {
-      display: inline-flex;
-      font-size: 1.5rem;
-      margin-bottom: 20px;
-
-      // border-right: 4px solid black;
-      // animation: __blinkcaret 500ms step-end infinite alternate;
-      text-align: justify;
-    }
-    &__sec5 {
-      font-size: 1rem;
-      text-align: justify;
-      &::first-letter {
-        text-transform: capitalize;
-      }
-    }
-  }
-  &__picture {
-    width: 45%;
-    height: 20rem;
-    display: flex;
-    justify-content: center;
-    @media (min-width: 20em) {
+    img {
       width: 100%;
-    }
-    @media (min-width: 37.5em) {
-      height: 20rem;
-    }
-    @media (min-width: 56em) {
-      height: 20rem;
-      // width: auto;
-    }
-    &__cont {
-      // width: 20rem;
       height: 100%;
-
-      // overflow: hidden;
-      // @media (min-width: 56em) {
-      //   height: auto;
-      //   width: auto;
-      // }
-      @media (min-width: 20em) {
-      }
-      @media (min-width: 37.5em) {
-        height: 20rem;
-      }
-      @media (min-width: 56em) {
-        // height: 20rem;
-        // width: auto;
-      }
-      & > img {
-        width: auto;
-        height: 25em;
-        object-fit: cover;
-        // border-radius: 50%;
-      }
+      object-fit: cover;
+      aspect-ratio: auto;
+      position: absolute;
+      z-index: -1;
+      top: 0;
     }
   }
-}
+  &__wrapper {
+    display: flex;
+    flex-direction: column;
+    padding: 100px;
+    gap: 30px;
+    p {
+      width: max(30%, 400px);
+      text-align: justify;
+      text-justify: inter-word;
+      color: white;
+      font-weight: 300;
+      line-height: 25px;
+    }
+    button {
+      width: fit-content;
+      padding: 10px 20px;
+      font-size: 1.1rem;
+      color: white;
+      font-weight: 300;
+      background-color: rgba(255, 255, 255, 0.247);
+      border: 1px solid rgba(255, 255, 255, 0.4);
+      border-radius: 13px;
+      transition: all 0.1s;
+      position: relative;
+      // z-index: ;
+      overflow: hidden;
 
-@keyframes loop-color {
-  0% {
-    color: $primary;
-  }
-  50% {
-    color: rgba($color: $primary, $alpha: 0.5);
-  }
-  100% {
-    color: red;
-  }
-}
-@keyframes __blinkcaret {
-  50% {
-    border-color: transparent;
+      &::after {
+        width: 0;
+        height: 0;
+        content: "";
+        border-radius: 100%;
+        top: -100px;
+        left: -100px;
+        position: absolute;
+        background-color: rgba(255, 255, 255, 0.376);
+        transition: all 0.5s;
+        overflow: hidden;
+        z-index: -1;
+      }
+      &:hover::after {
+        width: 500px;
+        height: 500px;
+      }
+    }
   }
 }
