added some additoin check

--- a/src/styles/pages/_memory.scss
+++ b/src/styles/pages/_memory.scss
@@ -25,7 +25,7 @@
     text-fill-color: transparent;
     /* Gradient in Hex */
 
-    font-family: "Tangerine", cursive;
+    font-family: 'Tangerine', cursive;
 
     @media (max-width: 37.6em) {
       letter-spacing: 10px;
@@ -130,7 +130,7 @@
     text-fill-color: transparent;
     /* Gradient in Hex */
 
-    font-family: "Tangerine", cursive;
+    font-family: 'Tangerine', cursive;
 
     @media (max-width: 37.6em) {
       letter-spacing: 10px;
