--- a/src/components/Embla/css/embla.css
+++ b/src/components/Embla/css/embla.css
@@ -1,6 +1,6 @@
 .embla {
   margin: auto;
-  margin-top: 30px;
+
   --slide-spacing: 1rem;
   --slide-size: 100%;
 }
@@ -16,7 +16,6 @@
   transform: translate3d(0, 0, 0);
   flex: 0 0 var(--slide-size);
   min-width: 0;
-  padding-left: var(--slide-spacing);
 }
 .embla__slide__img {
   display: block;
@@ -99,7 +98,7 @@
   border-radius: 50%;
   display: flex;
   align-items: center;
-  content: "";
+  content: '';
 }
 .embla__dot--selected:after {
   box-shadow: inset 0 0 0 0.2rem var(--text-body);
