--- a/src/index.css
+++ b/src/index.css
@@ -84,6 +84,64 @@ button:focus-visible {
       #a7623d 100%
     );
   }
+
+  @font-face {
+    font-family: 'Metropolis';
+    src: url('./assets/fonts/Metropolis-Thin.otf');
+    font-weight: 100;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: 'Metropolis';
+    src: url('./assets/fonts/Metropolis-ExtraLight.otf');
+    font-weight: 200;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: 'Metropolis';
+    src: url('./assets/fonts/Metropolis-Light.otf');
+    font-weight: 300;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: 'Metropolis';
+    src: url('./assets/fonts/Metropolis-Regular.otf');
+    font-weight: 400;
+    font-style: normal;
+  }
+  @font-face {
+    font-family: 'Metropolis';
+    src: url('./assets/fonts/Metropolis-Medium.otf');
+    font-weight: 500;
+    font-style: normal;
+  }
+  @font-face {
+    font-family: 'Metropolis';
+    src: url('./assets/fonts/Metropolis-SemiBold.otf');
+    font-weight: 600;
+    font-style: normal;
+  }
+  @font-face {
+    font-family: 'Metropolis';
+    src: url('./assets/fonts/Metropolis-Bold.otf');
+    font-weight: 700;
+    font-style: normal;
+  }
+  @font-face {
+    font-family: 'Metropolis';
+    src: url('./assets/fonts/Metropolis-ExtraBold.otf');
+    font-weight: 800;
+    font-style: normal;
+  }
+  @font-face {
+    font-family: 'Metropolis';
+    src: url('./assets/fonts/Metropolis-Black.otf');
+    font-weight: 900;
+    font-style: normal;
+  }
 }
 .pace {
   -webkit-pointer-events: none;
