--- a/src/styles/pages/_cinematography.scss
+++ b/src/styles/pages/_cinematography.scss
@@ -1,103 +1,7 @@
-// .films {
-//   display: flex;
-//   flex-direction: column;
-//   justify-content: center;
-//   align-items: center;
-
-//   max-width: 1440px;
-//   margin: 10rem auto;
-//   &__heading {
-//     margin-top: 1rem;
-//     font-size: 8rem;
-//     text-align: center;
-//     // letter-spacing: 30px;
-//     color: $primary;
-//     margin-bottom: 2rem;
-//     background: linear-gradient(
-//       to right,
-//       #ac663f 0%,
-//       27.470356225967407%,
-//       #c07246 54.940712451934814%,
-//       77.47035622596741%,
-//       #a7623d 100%
-//     );
-//     letter-spacing: 4px;
-//     -webkit-background-clip: text;
-//     -webkit-text-fill-color: transparent;
-//     background-clip: text;
-//     text-fill-color: transparent;
-//     /* Gradient in Hex */
-
-//     font-family: "Tangerine", cursive;
-//   }
-//   &__desc {
-//     color: rgb(111, 111, 111);
-//     padding: 0 4rem;
-//     text-align: center;
-//     line-height: 23px;
-//     margin-bottom: 3rem;
-//     @media (max-width: 39.5em) {
-//       padding: 0 5px;
-//     }
-//   }
-//   &__vid {
-//     width: 80%;
-//     display: grid;
-//     gap: 20px;
-//     grid-template-columns: 1fr 1fr;
-//     grid-auto-rows: 350px;
-//     @media (max-width: 61em) {
-//       grid-auto-rows: 280px;
-//       grid-template-columns: 1fr;
-//     }
-
-//     &_items {
-//       width: 100%;
-//       height: 100%;
-//       background: red;
-
-//       &:nth-child(3n + 1) {
-//         grid-row: span 2;
-//         grid-column: 1 / span 2;
-//         @media (max-width: 61em) {
-//           grid-row: 1;
-//           grid-column: 1;
-//         }
-//       }
-//     }
-//   }
-//   &__fw {
-//     width: 100%;
-//     & > .films__videocontainer {
-//       & > iframe {
-//         width: 100%;
-//         height: 40rem;
-//         @media (max-width: 39.5em) {
-//           height: 20rem;
-//         }
-//       }
-//     }
-//   }
-//   &__hw {
-//     & > .films__videocontainer {
-//       display: flex;
-//       gap: 10px;
-//       width: 100%;
-//       @media (max-width: 39.5em) {
-//         display: block;
-//       }
-//       & > iframe {
-//         width: 100%;
-//         height: 20rem;
-//       }
-//     }
-//   }
-// }
-
 .films {
   &__video {
     top: 0;
-    margin-top: -100px;
+    /* margin-top: -20px; */
     position: relative;
     z-index: -1;
 
@@ -111,7 +15,9 @@
       }
 
       @media (min-width: 1100px) {
+        width: 90%;
         height: auto;
+        margin-inline: auto;
       }
     }
   }
@@ -188,7 +94,7 @@
 
     @media (min-width: 300px) {
       font-size: 2rem;
-      padding: 70px 50px;
+      padding: 10px 30px;
 
       h4 {
         line-height: 50px;
@@ -204,7 +110,7 @@
     }
     @media (min-width: 1100px) {
       font-size: 4rem;
-      padding: 100px 50px;
+      padding: 120px 50px;
 
       h4 {
         line-height: 80px;
