added few more changes;

--- a/src/Navbar/MobileNavbar/styles.css
+++ b/src/Navbar/MobileNavbar/styles.css
@@ -14,6 +14,17 @@
   bottom: 0;
   width: 300px;
   background: #fff;
+  background: transparent;
+  transition: all 600ms linear;
+}
+
+.background-black {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 300px;
+  background: #fff;
 }
 
 .mobile_nav__toggle {
@@ -30,6 +41,8 @@
   height: 50px;
   border-radius: 50%;
   background: transparent;
+  z-index: 99999;
+  background-color: transparent;
 }
 
 .mobile_nav__ullist,
