--- a/src/styles/pages/_cinematography.scss
+++ b/src/styles/pages/_cinematography.scss
@@ -7,7 +7,8 @@
 
     #myVideo {
       @media (min-width: 300px) {
-        height: 500px;
+        /* height: 500px; */
+        margin-top: 100px;
       }
 
       @media (min-width: 600px) {
@@ -194,6 +195,10 @@
       @media (min-width: 1100px) {
         width: 60vw;
         height: 500px;
+      }
+      @media (min-width: 1800px) {
+        width: 50vw;
+        height: 700px;
       }
     }
   }
